k8/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudops-service
  namespace: default
spec:
  selector:
    app: cloudopsk8
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
